--- a/index.html
+++ b/index.html
@@ -99,23 +99,32 @@
             <h1 class="px-10 text-3xl text-gray-500 font-bold">Projects</h1>
         </div>
         <div class="py-3 px-10 text-justify sm:pr-20">
-            <div class="flex justify-evenly mt-10">
-                <div class="card border-2 border-black w-96 h-32 sm:w-60 sm:h-64 mr-4">
+            <div class="grid grid-cols-2 sm:grid-cols-3 gap-4 mt-10 lg:mx-5 xl:mx-40">
+                <div class="card border-2 border-black w-28 h-32 sm:w-52 lg:w-60 sm:h-64 mr-4">
                     <div>
-                        <img src="image/bill calculator.png" alt="Bill Calculator" id="bill-calculator" class="w-96 h-24 sm:w-60 sm:h-52">
+                        <img src="image/bill calculator.png" alt="Bill Calculator" id="bill-calculator" class="w-28 h-24 sm:w-52 lg:w-60 sm:h-52">
                     </div>
-                    <div class="sm:w-60 text-center">
+                    <div class="sm:w-53 lg:w-60 text-center">
                         <a href="bill.html" target="_blank" class="sm:text-xl font-bold show">Bill System</a>
                         <a href="bill.html" target="_blank" class="sm:text-xl font-bold underline hidden hide">Visit</a>
                     </div>
                 </div>
-                <div class="card border-2 border-black w-96 h-32 sm:w-60 sm:h-64 mr-4">
+                <div class="card border-2 border-black w-28 h-32 sm:w-52 lg:w-60 sm:h-64 mr-4">
                     <div>
-                        <img src="image/calculator.png" alt="Calculator" id="calculator" class="w-96 h-24 sm:w-60 sm:h-52">
+                        <img src="image/calculator.png" alt="Calculator" id="calculator" class="w-96 h-24 sm:w-52 lg:w-60 sm:h-52">
                     </div>
-                    <div class="sm:w-60 text-center">
+                    <div class="sm:w-53 lg:w-60 text-center">
                         <a href="calculator.html" target="_blank" class="sm:text-xl font-bold show">Calculator</a>
                         <a href="calculator.html" target="_blank" class="sm:text-xl font-bold underline hidden hide">Visit</a>
+                    </div>
+                </div>
+                <div class="card border-2 border-black w-28 h-32 sm:w-52 lg:w-60 sm:h-64 mr-4">
+                    <div>
+                        <img src="image/drum-kit.png" alt="Calculator" id="calculator" class="w-28 h-24 sm:w-52 lg:w-60 sm:h-52">
+                    </div>
+                    <div class="sm:w-53 lg:w-60 text-center">
+                        <a href="drum.html" target="_blank" class="sm:text-xl font-bold show">Drum Kit</a>
+                        <a href="drum.html" target="_blank" class="sm:text-xl font-bold underline hidden hide">Visit</a>
                     </div>
                 </div>
             </div>
