--- a/drum.html
+++ b/drum.html
@@ -40,13 +40,13 @@
             <h1 class="px-10 text-2xl text-gray-500 font-bold">Drum Kit</h1>
         </div>
         <div class="px-6 grid grid-cols-2 sm:grid-cols-3 xl:grid-cols-4 xl:my-10">
-            <button class="border-2 border-black m-4 w-28 xl:w-36 h-20 xl:h-28 text-4xl font-bold text-red-500 w drum">W</button>
-            <button class="border-2 border-black m-4 w-28 xl:w-36 h-20 xl:h-28 text-4xl font-bold text-red-500 a drum">A</button>
-            <button class="border-2 border-black m-4 w-28 xl:w-36 h-20 xl:h-28 text-4xl font-bold text-red-500 s drum">S</button>
-            <button class="border-2 border-black m-4 w-28 xl:w-36 h-20 xl:h-28 text-4xl font-bold text-red-500 d drum">D</button>
-            <button class="border-2 border-black m-4 w-28 xl:w-36 h-20 xl:h-28 text-4xl font-bold text-red-500 j drum">J</button>
-            <button class="border-2 border-black m-4 w-28 xl:w-36 h-20 xl:h-28 text-4xl font-bold text-red-500 k drum">K</button>
-            <button class="border-2 border-black m-4 w-28 xl:w-36 h-20 xl:h-28 text-4xl font-bold text-red-500 l drum">L</button>
+            <button class="border-2 border-black m-4 w-28 xl:w-36 h-20 xl:h-28 text-4xl font-bold text-red-500 w drum">w</button>
+            <button class="border-2 border-black m-4 w-28 xl:w-36 h-20 xl:h-28 text-4xl font-bold text-red-500 a drum">a</button>
+            <button class="border-2 border-black m-4 w-28 xl:w-36 h-20 xl:h-28 text-4xl font-bold text-red-500 s drum">s</button>
+            <button class="border-2 border-black m-4 w-28 xl:w-36 h-20 xl:h-28 text-4xl font-bold text-red-500 d drum">d</button>
+            <button class="border-2 border-black m-4 w-28 xl:w-36 h-20 xl:h-28 text-4xl font-bold text-red-500 j drum">j</button>
+            <button class="border-2 border-black m-4 w-28 xl:w-36 h-20 xl:h-28 text-4xl font-bold text-red-500 k drum">k</button>
+            <button class="border-2 border-black m-4 w-28 xl:w-36 h-20 xl:h-28 text-4xl font-bold text-red-500 l drum">l</button>
         </div>
     </div>
     <script src="js/script.js"></script>
